tests/sawn/fixtures/invalid/17_bare_key_no_children.sawn
// INVALID: Bare key with no {} suffix (use key{} for objects)
metadata
